@@ -1,0 +1,11 @@
+all : html
+
+docs = API
+
+html : $(foreach f,$(docs),$(f).html)
+
+%.html : %.txt
+	rst2html.py $< > $@
+
+clean :
+	rm -f *~ *.html || true
